Task 9: comments added. Some dead code cleanups.
